kubernetes/gr-foundry/manifests/postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - postgres
                  - vault
                  - sentinel
                  - jiffy
                  - mapache
      ports:
        - protocol: TCP
          port: 5432
